welcome.lessons.welcome.array.occurenceofvalue.OccurrenceOfValue.scala.error
occurrences:4: error: not found: value value
		if (nums(i)==value) {nb=nb+1}
                             ^occurrences:6: error: not found: value cb
	return cb
               ^